Skip to content

Seekbar tooltip appears resizeable on Linux, makes seeking with mouse difficult

For some reason, Unity on Ubuntu 18.04 renders the new seekbar tooltip as resizeable and I have to aim carefully to not accidentally resize the tooltip instead of doing the actual seeking. I've noticed this in 3.0.0 and it's still there in 3.0.1. Very annoying.

(Moving the tooltip up might solve this problem already.)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information