qt: make the time tooltip a tooltip

This avoids to lose window focus when the mouse is over the seekbar (on
XFCE), and should also prevent the tooltip to appear resizeable on
Unity.

Probably fixes #20316

Signed-off-by: Hugo Beauzée-Luyssen <hugo@beauzee.fr>
(cherry picked from commit 58155349a053d38d882d47357b225b8703c696ac)
Signed-off-by: Hugo Beauzée-Luyssen <hugo@beauzee.fr>